syntax = "proto3";

package org.project_planton.provider.snowflake.snowflakedatabase.v1;

import "org/project-planton/provider/snowflake/provider.proto";
import "org/project-planton/provider/snowflake/snowflakedatabase/v1/api.proto";

//snowflake-database stack-input
message SnowflakeDatabaseStackInput {
  //target cloud-resource
  SnowflakeDatabase target = 1;
  //provider-config
  org.project_planton.provider.snowflake.SnowflakeProviderConfig provider_config = 2;
}
