syntax = "proto3";

package org.project_planton.provider.snowflake.snowflakedatabase.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/snowflake/snowflakedatabase/v1/spec.proto";
import "org/project_planton/provider/snowflake/snowflakedatabase/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//snowflake-database
message SnowflakeDatabase {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'snowflake.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'SnowflakeDatabase'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  SnowflakeDatabaseSpec spec = 4 [(buf.validate.field).required = true];

  //status
  SnowflakeDatabaseStatus status = 5;
}

//snowflake-database status
message SnowflakeDatabaseStatus {
  //stack-outputs
  SnowflakeDatabaseStackOutputs outputs = 1;
}
